@@ -1,6 +1,14 @@
 LTL3 Tools NEWS
 -=-=-=-=-=-=-=-
 
+[under development]                     LTL3 tools 0.0.8
+
+- LTL3 tools now work with the latest version (= 4.0) of AT&T's FSM
+  library (Thanks to Rico Backasch for helping me debug this!)
+
+- Added a regression test suite (which is relevant mostly for
+  developers)
+
 Wed Apr  1 21:20:22 EST 2009            LTL3 tools 0.0.7
 
 - Added program formulatosymbols which takes a formula and returns a list
